@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2002/09/22 10:35:48 cjep Exp $
+$NetBSD: distinfo,v 1.3 2002/09/25 06:50:17 cjep Exp $
 
-SHA1 (leafnode-1.9.26.rel.tar.bz2) = a3db611ea4f6dc084fee94c850a47913c61b53ee
-Size (leafnode-1.9.26.rel.tar.bz2) = 548636 bytes
+SHA1 (leafnode-1.9.27.rel.tar.bz2) = b07b7dfc7055db2b813b7cd1f4c0db7208871eb4
+Size (leafnode-1.9.27.rel.tar.bz2) = 571153 bytes
 SHA1 (patch-aa) = d1aa900eb9040f8810afd7dbe4f26551c7dad99e
